fix: removed extra margin in the form

--- a/src/components/formElements/Fieldset.module.scss
+++ b/src/components/formElements/Fieldset.module.scss
@@ -9,7 +9,7 @@
   display: block;
   font-size: 18px;
   font-weight: 500;
-  margin-bottom: 50px;
+  //margin-bottom: 50px;
   width: 100%;
 
   &::after {
